<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">똑디</string>
    <string name="test_doubleline">텍스트\n텍스트</string>
    <string name="text_search_study">스터디 검색</string>
    <string name="text_write">글쓰기</string>
    <string name="text_chatting">채팅</string>
    <string name="text_homework">과제</string>
    <string name="text_schedule">일정</string>
    <string name="text_member">멤버</string>
    <string name="text_setting">설정</string>
    <string name="text_like">좋아요</string>
    <string name="text_write_reply">댓글쓰기</string>
    <string name="text_noti">공지</string>
    <string name="text_notice">공지사항</string>
    <string name="text_makestudy">스터디 만들기</string>
    <string name="text_studytype">스터디 타입</string>
    <string name="text_closed">비공개</string>
    <string name="text_open">공개</string>
    <string name="text_selectsector">분야 선택</string>
    <string name="text_study_intromsg">스터디 소개말</string>
    <string name="text_critical_items">필수입력사항</string>
    <string name="text_location">장소</string>
    <string name="text_period">기간</string>
    <string name="text_numofpeople">인원</string>
    <string name="text_optional_items">선택입력사항</string>
    <string name="text_time">모임시간</string>
    <string name="text_joining_condition">가입조건</string>
    <string name="text_sex">성별</string>
    <string name="text_final_make_study">스터디 개설</string>
    <string name="text_make_study_complete">스터디 개설 완료</string>
    <string name="text_feild_select">분야 선택</string>
    <string name="text_myfitstudy">맞춤스터디</string>


    <string name="explain_closedtype">초대 링크를 통해서만\n가입신청이 가능합니다.</string>
    <string name="explain_opentype">검색/추천을 통해 누구나\n가입신청이 가능합니다.</string>
    <string name="explain_make_study_complete">이 스터디에서 함께 할 멤버들을 초대해보세요!</string>

    <string name="hint_input_studyname">스터디 이름을 입력하세요.</string>
    <string name="hint_input_stduyintro">소개말을 입력하세요.</string>
    <string name="hint_input_location">장소입력</string>
    <string name="hint_input_period">기간을 입력하세요.</string>
    <string name="hint_input_member">인원을 입력하세요.</string>
    <string name="hint_input_time">시간선택</string>
    <string name="hint_input_condition">가입조건을 입력하세요.</string>
    <string name="hint_input_sex">성별조건을 입력하세요.</string>

    <string name="text_personal_data">개인정보</string>
    <string name="text_account">계정</string>
    <string name="text_positional_information">위치 정보 이용 동의</string>
    <string name="text_Notice_Message">알림/메세지</string>
    <string name="text_Notice_setting">알림 설정</string>
    <string name="text_Notice_sound_setting">알림음 설정</string>
    <string name="text_Notice_Blocked_Time_Setting">방해금지 시간대 서정</string>
    <string name="text_customer_center">고객센터</string>
    <string name="text_customenr_support">고객지원</string>
    <string name="text_member_leave">회원탈퇴</string>
    <string name="text_version_info">버전 정보</string>
    <string name="text_version">버전</string>

    <string name="text_StudyRoom_activity_title_member">멤버</string>
    <string name="text_StudyRoom_activity_title_member_management">멤버관리</string>

    <string name="text_attend">출석</string>
    <string name="text_do_not_attend">미출석</string>
    <string name="text_mon">MON</string>
    <string name="text_tue">TUE</string>
    <string name="text_wed">WED</string>
    <string name="text_thr">THR</string>
    <string name="text_fri">FRI</string>
    <string name="text_sat">SAT</string>

    <string name="text_sun">SUN</string>

    <string name="text_kor_mon">MON</string>
    <string name="text_kor_tue">TUE</string>
    <string name="text_kor_wed">WED</string>
    <string name="text_kor_thr">THR</string>
    <string name="text_kor_fri">FRI</string>
    <string name="text_kor_sat">SAT</string>

    <string name="text_kor_sun">SUN</string>

    <string name="text_whole_clause_agree">전체약관에 동의합니다</string>
    <string name="text_ddok_clause_agree">똑디 이용약관 동의(필수)</string>
    <string name="text_personal_info_agree">개인정보 수집 / 이용약관 동의(필수)</string>
    <string name="text_look_clause">버전</string>


    <string name="text_name">이름</string>
    <string name="text_email">이메일</string>
    <string name="text_pwd">비밀번호</string>
    <string name="text_pwd2">비밀번호확인</string>
    <string name="text_tel">연락처</string>


    <string name="text_gender">성별</string>
    <string name="text_age">나이</string>


    <string name="text_hint_email">이메일 입력</string>
    <string name="text_hint_pwd">비밀번호 입력</string>
    <string name="text_login">로그인</string>
    <string name="text_auto_login">자동로그인</string>
    <string name="text_id_pwd_find">아이디/비밀번호 찾기</string>

    <string name="text_piture">사진</string>

    <string name="text_movie">동영상</string>


    <string name="text_file">파일</string>

    <string name="text_register">회원가입</string>


    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_setup">SetupActivity</string>
    <string name="title_activity_studyroom">StudyRoomActivity</string>


    <color name="color_orange">#FFBC91</color>
    <color name="mint">#9EDACE</color>
    <color name="gray1">#E9E6DF</color>
    <color name="blackgray">#605B55</color>
    <color name="white">#FFFFFF</color>
    <color name="mint_dark">#107273</color>

    <color name="Test_red">#ff0011</color>

</resources>
