<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.study.ddokdy.StudyMainActivity">
    <include
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        layout="@layout/topbar_big"/>
    <RelativeLayout
        android:id="@+id/studyMain_rl_noticepan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/px_50"
        android:background="@color/gray1">
        <TextView
            android:id="@+id/studyMain_tv_pivot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="@dimen/textsize_subtitle"
            android:textColor="@color/mint"
            android:layout_marginStart="@dimen/px_50"/>
        <TextView
            style="@style/CustomTitleText"
            android:id="@+id/studyMain_tv_noticeDate"
            android:text="@string/app_name"
            android:layout_toEndOf="@id/studyMain_tv_pivot"
            android:layout_alignBaseline="@id/studyMain_tv_pivot"/>
        <TextView
            style="@style/CustomSubTitleText"
            android:id="@+id/studyMain_tv_noticeContent"
            android:text="@string/app_name"
            android:layout_below="@id/studyMain_tv_pivot"
            android:layout_alignStart="@+id/studyMain_tv_pivot"
            android:layout_marginTop="@dimen/margin_samll"
            android:layout_marginBottom="0dp"
            android:lineSpacingExtra="@dimen/margin_samll"
            android:maxLines="3"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end">
        <Button
            android:id="@+id/btn_submit"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/px_165"
            android:text="@string/text_write"
            android:textColor="@color/white"
            android:background="@color/mint_dark"
            android:textSize="@dimen/textsize_subtitle"
            android:padding="@dimen/default_margin"
            android:layout_alignParentEnd="true"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="@dimen/px_165"
            android:background="@color/white"
            android:layout_toLeftOf="@id/btn_submit"
            android:layout_marginStart="0dp"
            android:paddingTop="@dimen/default_margin"
            android:paddingBottom="@dimen/default_margin"
            android:paddingStart="@dimen/px_90"
            android:paddingEnd="@dimen/default_margin"
            android:inputType="textAutoComplete"
            android:hint="@string/text_write"
            android:textColor="@color/blackgray"
            android:textSize="@dimen/textsize_subtitle"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <com.handmark.pulltorefresh.library.PullToRefreshListView
            android:id="@+id/ptr_listview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:dividerHeight="0dp"
            android:divider="#00000000"
            android:background="@color/gray1"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:background="@color/blackgray"
            android:orientation="horizontal"
            android:layout_alignParentBottom="true">
            <com.study.ddokdy.ZBadgeView
                android:id="@+id/studyMain_btn_chat"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:minHeight="@dimen/px_165"
                app:text="@string/text_chatting"
                app:backgroundColor="@color/blackgray"/>
            <com.study.ddokdy.ZBadgeView
                android:id="@+id/studyMain_btn_homework"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                app:text="@string/text_homework"
                app:backgroundColor="@color/blackgray"/>
            <com.study.ddokdy.ZBadgeView
                android:id="@+id/studyMain_btn_schedule"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                app:text="@string/text_schedule"
                app:backgroundColor="@color/blackgray"/>
            <com.study.ddokdy.ZBadgeView
                android:id="@+id/studyMain_btn_member"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                app:text="@string/text_member"
                app:backgroundColor="@color/blackgray"/>
            <com.study.ddokdy.ZBadgeView
                android:id="@+id/studyMain_btn_setting"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                app:text="@string/text_setting"
                app:backgroundColor="@color/blackgray"/>
        </LinearLayout>
    </RelativeLayout>

</LinearLayout>
